fix spacing and scroll for page content

--- a/src/index.css
+++ b/src/index.css
@@ -103,7 +103,7 @@
     z-index: 200;
     top: 0;
     /*Size*/
-    height: 3.5rem;
+    height: var(--common-top-nav-height);
     width: 100%;
     /*Display*/
     justify-content: center;
@@ -164,13 +164,22 @@
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 20vw);
     justify-content: center;
     align-items: center;
     align-content: center;
     flex-wrap: nowrap;
-    flex-direction: row;
+    flex-direction: column;
     transform-origin: bottom left;
+    outline: none;
+    box-sizing: border-box;
+    padding-top: 4vh;
+
+    /* scroll */
+    overflow: scroll;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+    scroll-margin-bottom: 100px;
 }
 
 .cont_animate {
@@ -182,16 +191,17 @@
 }
 
 .content_container {
-    box-sizing: border-box;
-    padding: 8vh 0 10vh 0;
-    scroll-margin-bottom: 15vh;
-    height: 100%;
+    outline: none;
+    min-height: 100%;
     width: 80%;
     max-width: 1024px;
-    /* scroll */
-    overflow: scroll;
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
+    box-sizing: border-box;
+}
+
+.content_container:after {
+    content: '';
+    display: inline-block;
+    height: 4vh;
 }
 
 .content_container::-webkit-scrollbar {
@@ -202,6 +212,8 @@
 @media only screen and (min-width: 650px) and (min-height: 650px) {
     .page_content {
         transform-origin: top left;
+        top: var(--common-top-nav-height);
+        height: calc(100% - var(--common-top-nav-height));
     }
 
     #top-nav {
